--- a/index.html
+++ b/index.html
@@ -9,30 +9,27 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/media.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  <script src="https://unpkg.com/scrollreveal"></script>
-  <script>
-    ScrollReveal({ reset: true });
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+      ScrollReveal({ reset: true });
     </script>
-
   </head>
   <body>
-
     <div class="loader">
       <span class="loader__element"></span>
       <span class="loader__element"></span>
       <span class="loader__element"></span>
     </div>
 
-
     <nav>
       <div class="container">
         <a href="#"><img src="img/logo.png" alt="Logo" class="logo" /> </a>
         <button class="toggle"><i class="fa-solid fa-bars"></i></button>
         <ul class="main-section menu">
-          <li class="list ">
+          <li class="list">
             <a href="#hero">Home</a>
           </li>
           <li class="list"><a href="#intro">About</a></li>
@@ -51,13 +48,17 @@
       <div class="container">
         <div class="contain-container">
           <div class="content-hero">
-            <h1 class="animate__animated animate__bounce animate__repeat-3 animate__pulse">
+            <h1
+              class="animate__animated animate__bounce animate__repeat-3 animate__pulse"
+            >
               Ahmed <br />
               Salem
             </h1>
             <p class="text-details">Front End Developer</p>
 
-            <ul class="list-items animate__animated animate__bounce animate__repeat-1 ">
+            <ul
+              class="list-items animate__animated animate__bounce animate__repeat-1"
+            >
               <li>
                 <a href="#" class="main-section"
                   ><i class="fa-brands fa-facebook"></i
@@ -84,7 +85,9 @@
 
         <div class="more">
           <div class="mouse main-section">
-            <button class="btnDown"><i class="fa-solid fa-computer-mouse"></i></button>
+            <button class="btnDown">
+              <i class="fa-solid fa-computer-mouse"></i>
+            </button>
           </div>
 
           <div class="arrow main-section">
@@ -106,17 +109,12 @@
 
         <div class="r-div">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            explicabo necessitatibus voluptate ipsa, culpa magnam architecto eum
-            debitis asperiores nisi quos, laudantium assumenda excepturi omnis
-            adipisci voluptas iure officia eligendi!
-          </p>
-
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            explicabo necessitatibus voluptate ipsa, culpa magnam architecto eum
-            debitis asperiores nisi quos, laudantium assumenda excepturi omnis
-            adipisci voluptas iure officia eligendi!
+            My name's Ahmed Salem, I live in Palestine. I graduated from Al-Quds
+            Open University Where I studied Computer science. And for now, I am
+            working as Front-End Developer also I am Working In Customers
+            Services, I mostly work with clients from Gulf. I like coding and
+            follow the updates of programming languages to match my designs with
+            the updates.
           </p>
 
           <div class="skills">
@@ -290,7 +288,7 @@
     <!-- Start Style Footer -->
     <footer id="footer">
       <div class="container main-section">
-          <h3>Ahmed CV</h3>
+        <h3>Ahmed CV</h3>
 
         <p>Created By Ahmed</p>
       </div>
